# serde-crypt-macro

./: Cargo.toml  README.md  lib.rs
.github/: dependabot.yml
examples/simple/: Cargo.toml  main.rs
