[package]
name = "serde-crypt-macro"
version = "0.1.3"
edition = "2021"
description = "The end-to-end encrypted serde::Serializer and serde::Deserializer - wasm-ready - procedural macro to generate encrypted/decrypted type variants for both server- and client-side use"
license = "GPL-3.0-or-later"
repository = "https://github.com/D3PSI/serde-crypt-macro"
keywords = ["serde", "serialization", "crypto", "encryption"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/*"]

[lib]
path = "./lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["parsing"] }
serde = { version = "1.0", features = ["derive"] }
serde-crypt = "0.1.2"
